--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -5119,7 +5119,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "70cd2071",
+   "id": "1091e5bf",
    "metadata": {},
    "outputs": [
     {
@@ -5264,7 +5264,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d8294ce8",
+   "id": "2687aa29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5281,7 +5281,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a8dc7960",
+   "id": "7889b747",
    "metadata": {},
    "outputs": [
     {
@@ -5518,7 +5518,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "67eade2c",
+   "id": "0a50e739",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5535,7 +5535,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "8cee5afe",
+   "id": "50fd1f51",
    "metadata": {},
    "outputs": [
     {
@@ -5572,7 +5572,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d29b9fea",
+   "id": "6f7f4f49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5589,7 +5589,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "c7e69b88",
+   "id": "64eb82c3",
    "metadata": {},
    "outputs": [
     {
@@ -5626,7 +5626,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "8e6b61c5",
+   "id": "e19c0080",
    "metadata": {},
    "outputs": [
     {
@@ -5732,7 +5732,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "6010cc2b",
+   "id": "1d35c79b",
    "metadata": {},
    "outputs": [
     {
@@ -5838,7 +5838,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "c4cb4a06",
+   "id": "5b758099",
    "metadata": {},
    "outputs": [
     {
@@ -5945,7 +5945,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "02825e5f",
+   "id": "8a745f4e",
    "metadata": {},
    "outputs": [
     {
@@ -6052,7 +6052,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "485c5b5d",
+   "id": "f01731b9",
    "metadata": {},
    "outputs": [
     {
@@ -6082,7 +6082,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "8bc57ead",
+   "id": "993b7795",
    "metadata": {},
    "outputs": [
     {
@@ -6108,7 +6108,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "5cef519c",
+   "id": "b9bc0f05",
    "metadata": {},
    "outputs": [
     {
@@ -6135,7 +6135,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "b2f51544",
+   "id": "6f72c664",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6147,7 +6147,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "e027df1e",
+   "id": "d165a142",
    "metadata": {},
    "outputs": [
     {
@@ -6485,7 +6485,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "11ff95ac",
+   "id": "0c6e96f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6504,7 +6504,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "d7148b86",
+   "id": "51cc87a5",
    "metadata": {},
    "outputs": [
     {
@@ -6530,7 +6530,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "f390b5cc",
+   "id": "fa8d6c4e",
    "metadata": {},
    "outputs": [
     {
@@ -6649,7 +6649,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "0c8cdaf7",
+   "id": "1f5c44c1",
    "metadata": {},
    "outputs": [
     {
@@ -6771,7 +6771,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "7d38ea73",
+   "id": "53a6779c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6783,7 +6783,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "ed8f4664",
+   "id": "c39f93b3",
    "metadata": {},
    "outputs": [
     {
@@ -6947,7 +6947,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "a70f3bdd",
+   "id": "c8bf3773",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6966,7 +6966,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "09e1440a",
+   "id": "fbe1c517",
    "metadata": {},
    "outputs": [
     {
@@ -7068,7 +7068,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "6c61ec5a",
+   "id": "688b7bf3",
    "metadata": {},
    "outputs": [
     {
@@ -7172,8 +7172,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 98,
+   "id": "1df27cf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "b9b4f13c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "65626f91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "12a943b2",
+   "id": "b5df9429",
    "metadata": {},
    "outputs": [],
    "source": []
